--- a/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/CostingTemplates/Index.cshtml
@@ -25,7 +25,10 @@
             <h1>Шаблоны затрат</h1>
         </div>
         <div class="col">
-            <span v-on:click="addItem()" class="btn btn-success btn-sm float-right mt-3">Добавить элемент затрат</span>
+            <span v-on:click="addItem()" class="btn btn-success btn-sm float-right mt-3">
+                <i class="fas fa-plus"></i>
+                Добавить элемент затрат
+            </span>
         </div>
     </div>
 
@@ -33,18 +36,27 @@
         <thead class="thead-dark">
             <tr>
                 <th class="id">#</th>
+                <th class="category">Категория</th>
                 <th>Название</th>
                 <th class="qty">Кол.</th>
                 <th class="unit">Юнит</th>
                 <th class="cost">Цена</th>
                 <th class="total">Всего</th>
-                <th class="category">Категория</th>
+
                 <th class="actions"></th>
             </tr>
         </thead>
         <tbody>
             <tr v-bind:class="'element_' + item.Id" v-for="item in items">
                 <td>{{ item.Id }}</td>
+                <td>
+                    <select v-on:change="saveItem(item)" v-model="item.CategoryId" class="form-control form-control-sm">
+                        @foreach (var el in EnumUtil.ToDictionary<CostingCategoryEnum>())
+                        {
+                            <option value="@(el.Key)">@(el.Value)</option>
+                        }
+                    </select>
+                </td>
                 <td>
                     <input v-on:change="saveItem(item)" v-model="item.Name" type="text" class="form-control form-control-sm" placeholder="Название" />
                 </td>
@@ -65,14 +77,7 @@
                 <td>
                     <input v-on:change="saveItem(item)" v-model="item.Total" type="text" class="form-control form-control-sm numbers-only" placeholder="Всего" />
                 </td>
-                <td>
-                    <select v-on:change="saveItem(item)" v-model="item.CategoryId" class="form-control form-control-sm">
-                        @foreach (var el in EnumUtil.ToDictionary<CostingCategoryEnum>())
-                        {
-                            <option value="@(el.Key)">@(el.Value)</option>
-                        }
-                    </select>
-                </td>
+               
                 <td class="actions">
                     <span v-on:click="removeItem(item)" class="btn btn-sm btn-danger"><i class="fas fa-trash-alt"></i></span>
                 </td>
