--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.AvaliableCostingTemplates)
+                    @foreach (var item in Model.CostingTemplates)
                     {
                         <tr>
                             <td>@item.Id</td>
