--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -35,6 +35,7 @@
                         <th class="category">Категория</th>
                         <th>Название</th>
                         <th class="qty">Кол.</th>
+                        <th class="multiplier">Множитель</th>
                         <th class="unit">Юнит</th>
                         <th class="cost">Цена</th>
                         <th class="total">Всего</th>
@@ -44,7 +45,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.CostingTemplates)
+                    @foreach (var item in Model.AvaliableCostingTemplates)
                     {
                         <tr>
                             <td>@item.Id</td>
@@ -54,6 +55,9 @@
                             </td>
                             <td>
                                 @item.Qty
+                            </td>
+                            <td>
+                                1
                             </td>
                             <td>@(EnumUtil.DescriptionAttr(item.UnitEnum))</td>
                             <td>
