--- a/ColdCallsTracker/ColdCallsTracker/Views/Shared/_Layout.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                     <li class="nav-item @(Context.Request.Path.Value.ToLower().StartsWith("/costingtemplates") ? "active" : "")">
                         <a class="nav-link" href="/CostingTemplates">Шаблоны затрат</a>
                     </li>
+                    <li class="nav-item @(Context.Request.Path.Value.ToLower().StartsWith("/quotetemplates") ? "active" : "")">
+                        <a class="nav-link" href="/QuoteTemplates">Шаблоны предложений</a>
+                    </li>
                     <li class="nav-item @(Context.Request.Path.Value.ToLower().StartsWith("/script") ? "active" : "")">
                         <a class="nav-link" href="/Script">Скрипт</a>
                     </li>
