--- a/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
+++ b/ColdCallsTracker/ColdCallsTracker/wwwroot/css/site.css
@@ -371,3 +371,8 @@ input:checked + .slider:before {
     opacity: 0.5;
     pointer-events: none;
 }
+
+.with-single-multiplier {
+    background-color: lightgray !important;
+    cursor: not-allowed;
+}
