Шаблоны предложений готовы

--- a/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
+++ b/ColdCallsTracker/ColdCallsTracker/Pages/QuoteTemplates/Edit.cshtml
@@ -108,7 +108,7 @@
                         От стоимости UI: @(GlobalVariables.CustomDesignMarkup * 100) %
                     </td>
                     <td>
-                        <strong>{{ 0 }}</strong>
+                        <strong>{{ CustomDesignTotal.toFixed(2) }}</strong>
                     </td>
                     <td class="actions check-uncheck-costing"></td>
                 </tr>
